--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                <section class="flexbox">
                   <img src="./img/astronaut.jpg" alt="Austronaut in Space" />
                   <h1 class="banner-text">Who are in Space?</h1>
-                  <a href="./humans.html"> <button class="btn">Find out who</button></a>
+                  <a href="./humans.html" class="btn">Find out who</a>
                </section>
             </div>
          </div>
